[Fix] Center dock button in vertical mode, fix slider overlap in horizontal mode

--- a/src/components/DrawingToolbar.css
+++ b/src/components/DrawingToolbar.css
@@ -13,6 +13,7 @@
 
 .drawing-toolbar.dock-vertical {
   flex-direction: column;
+  align-items: center;
 }
 
 .drawing-toolbar.dock-horizontal {
